tests/NormalTests/paczka1/fuzzy1/17816111.err
Error in line 2: 4v5xn9ubPUQ A965 63,0
Error in line 3: kwX7PIuYIcG S201 79,8
Error in line 9: t5S4Hn A600 67,5
